syntax = "proto3";
import "google/protobuf/any.proto";

package yacht.config.proto;

message RewardSchemaConfig {
    string name = 1;
    float reward_scaling = 2;
    repeated float density_thresholds = 3;
}